--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["encoding", "data-structures"]
 license = "MIT"
 
 [dependencies]
+bytes = "~0.4"
 
 [build-dependencies]
 codegen = { package ="molecule-codegen", version = "=0.0.0", path = "../../tools/codegen" }
