--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "molecule"
-version = "0.0.5"
-authors = ["Boyu Yang <yangby@cryptape.com>"]
+version = "0.1.0"
+authors = ["Nervos Core Dev <dev@nervos.org>"]
 edition = "2018"
 description = "Rust bindings for molecule."
 homepage = "https://github.com/yangby-cryptape/molecule"
