--- a/tools/compiler/Cargo.toml
+++ b/tools/compiler/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "moleculec"
-version = "0.0.5"
-authors = ["Boyu Yang <yangby@cryptape.com>"]
+version = "0.1.0"
+authors = ["Nervos Core Dev <dev@nervos.org>"]
 edition = "2018"
 description = "Schema compiler for molecule."
 homepage = "https://github.com/yangby-cryptape/molecule"
@@ -19,7 +19,7 @@ license = "MIT"
 
 [dependencies.codegen]
 package ="molecule-codegen"
-version = "=0.0.5"
+version = "=0.1.0"
 path = "../codegen"
 
 [badges]
