--- a/tools/compiler/Cargo.toml
+++ b/tools/compiler/Cargo.toml
@@ -16,6 +16,7 @@ categories = [
 license = "MIT"
 
 [dependencies]
+clap = { version = "~2.33", features = ["yaml"] }
 
 [dependencies.codegen]
 package ="molecule-codegen"
