--- a/tools/codegen/Cargo.toml
+++ b/tools/codegen/Cargo.toml
@@ -16,6 +16,7 @@ categories = [
 license = "MIT"
 
 [dependencies]
+molecule = { version = "~0.2.0", path = "../../bindings/rust" }
 pest = "~2.1"
 pest_derive = "~2.1"
 quote = "~0.6"
