refactor(codegen): add builders for c, make code more readable and add few tests

--- a/examples/ci-tests/Cargo.toml
+++ b/examples/ci-tests/Cargo.toml
@@ -9,3 +9,6 @@ molecule = { path = "../../bindings/rust" }
 
 [build-dependencies]
 codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
+
+[dev-dependencies]
+slices = "~0.1"
