--- a/tools/codegen/Cargo.toml
+++ b/tools/codegen/Cargo.toml
@@ -22,6 +22,7 @@ pest_derive = "~2.1"
 quote = "~0.6"
 proc-macro2 = "~0.4"
 case = "~1.0"
+same-file = "~1.0"
 
 [badges]
 maintenance = { status = "experimental" }
