feat(bindings/c): check api version and compiler version during compile time

--- a/tools/codegen/Cargo.toml
+++ b/tools/codegen/Cargo.toml
@@ -23,6 +23,7 @@ quote = "~0.6"
 proc-macro2 = "~0.4"
 case = "~1.0"
 same-file = "~1.0"
+semver = "~0.9"
 
 [badges]
 maintenance = { status = "experimental" }
