--- a/examples/ci-tests/Cargo.toml
+++ b/examples/ci-tests/Cargo.toml
@@ -5,10 +5,14 @@ authors = ["Nervos Core Dev <dev@nervos.org>"]
 edition = "2018"
 
 [dependencies]
-molecule = { path = "../../bindings/rust" }
+molecule = { path = "../../bindings/rust", default-features = false }
 
 [build-dependencies]
 codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
 
 [dev-dependencies]
 slices = "~0.1"
+
+[features]
+default = ["std"]
+std = ["molecule/std"]
