--- a/tools/codegen/Cargo.toml
+++ b/tools/codegen/Cargo.toml
@@ -17,6 +17,7 @@ license = "MIT"
 
 [dependencies]
 molecule = { version = "=0.4.0", path = "../../bindings/rust", default-features = false }
+property = "~0.3"
 pest = "~2.1"
 pest_derive = "~2.1"
 quote = "~1.0"
@@ -24,6 +25,13 @@ proc-macro2 = "~1.0"
 case = "~1.0"
 same-file = "~1.0"
 semver = "~0.9"
+serde = { version = "~1.0", features = ["derive", "rc"], optional = true }
+serde_json = { version = "~1.0", optional = true }
+serde_yaml = { version = "~0.8", optional = true }
+
+[features]
+default = []
+compiler-plugin = ["serde", "serde_json", "serde_yaml"]
 
 [badges]
 maintenance = { status = "experimental" }
