--- a/examples/tests-utils-rust/Cargo.toml
+++ b/examples/tests-utils-rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "molecule-tests-utils"
+name = "molecule-tests-utils-rust"
 version = "0.5.0"
 authors = ["Nervos Core Dev <dev@nervos.org>"]
 edition = "2018"
@@ -9,10 +9,8 @@ proc-macro = true
 
 [dependencies]
 codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
+tests-loader = { package ="molecule-tests-loader", path = "../tests-loader" }
 syn = "~1.0"
 quote = "~1.0"
 proc-macro2 = "~1.0"
-serde = { version = "~1.0", features = ["derive"] }
 serde_yaml = "~0.8"
-faster-hex = "~0.4"
-property = "~0.3"
