test: test all test vectors in C apis

--- a/examples/ci-tests/Makefile
+++ b/examples/ci-tests/Makefile
@@ -2,6 +2,7 @@ MOLC_DIR = ../../tools/compiler/target/release
 MOLC = ${MOLC_DIR}/moleculec
 MOLINC = ../../bindings/c/include
 SCRIPT_GEN_C = scripts/generate-c
+BIN_GEN_C_TESTS = ../tests-utils-c/target/release/molecule-tests-utils-c
 
 SCHEMA = types
 SCHEMA_FILE = ../../test/schemas/${SCHEMA}.mol
@@ -10,7 +11,8 @@ HEADER_API = c/tests-api.h
 HEADER_GEN = c/tests-gen.h
 
 TMPDIR = target/tmp
-BINS = ${TMPDIR}/test-build-default ${TMPDIR}/simple-example
+BINS_C_TESTS = ${TMPDIR}/test-vector-default ${TMPDIR}/test-vector-simple
+BINS = ${TMPDIR}/test-build-default ${TMPDIR}/simple-example ${BINS_C_TESTS}
 TMP = ${TMPDIR} ${MOLC} \
 	  ${HEADER_API} ${HEADER_GEN}
 
@@ -43,8 +45,9 @@ test-rust:
 test-rust-no-std:
 	@cargo test --all --no-default-features
 
-test-c: tmpdir ${TMPDIR}/test-build-default
+test-c: tmpdir ${TMPDIR}/test-build-default ${BIN_GEN_C_TESTS} ${BINS_C_TESTS}
 	@${TMPDIR}/test-build-default
+	@for bin in ${BINS_C_TESTS} ; do "$${bin}"; done
 
 test-mixed: tmpdir ${TMPDIR}/simple-example
 	@tmpdir="${TMPDIR}" scripts/test-mixed simple-example
@@ -66,6 +69,9 @@ test-c-import: tmpdir ${MOL_DEPS}
 ${MOLC}:
 	@cd ../../tools/compiler; cargo build --release
 
+${BIN_GEN_C_TESTS}:
+	@cd ../tests-utils-c; cargo build --release
+
 ${HEADER_API}: ${SCHEMA_FILE} ${MOL_DEPS}
 	@set -eu \
 		; export PATH="$$(cd ${MOLC_DIR}; pwd):$${PATH}" \
@@ -78,4 +84,16 @@ ${TMPDIR}/test-build-default: c/test-build-default.c ${C_DEPS}
 	@${CC} ${CFLAGS} -I${MOLINC} -o $@ $<
 
 ${TMPDIR}/simple-example: c/simple-example.c ${C_DEPS}
+	@${CC} ${CFLAGS} -I${MOLINC} -o $@ $<
+
+c/test-vector-default.c: ${BIN_GEN_C_TESTS}
+	@${BIN_GEN_C_TESTS} ../../test/schemas/types.mol ../../test/vectors/default.yaml > $@
+
+c/test-vector-simple.c: ${BIN_GEN_C_TESTS}
+	@${BIN_GEN_C_TESTS} ../../test/schemas/types.mol ../../test/vectors/simple.yaml > $@
+
+${TMPDIR}/test-vector-default: c/test-vector-default.c ${C_DEPS}
+	@${CC} ${CFLAGS} -I${MOLINC} -o $@ $<
+
+${TMPDIR}/test-vector-simple: c/test-vector-simple.c ${C_DEPS}
 	@${CC} ${CFLAGS} -I${MOLINC} -o $@ $<
