ci: use fixed versions to do format and clippy

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,43 @@
-language: rust
-compiler: gcc
-os: linux
-rust: stable
-script:
-  - rustup component add rustfmt
-  - rustup component add clippy
-  - make ci
+matrix:
+  include:
+    - stage: Check
+      name: Format
+      language: rust
+      rust:
+        - 1.42.0
+      script:
+        - rustup component add rustfmt
+        - make fmt
+
+    - stage: Check
+      name: Clippy
+      language: rust
+      rust:
+        - 1.42.0
+      script:
+        - rustup component add clippy
+        - make clippy
+
+    - stage: Test
+      name: Stable
+      language: rust
+      compiler: gcc
+      rust:
+        - stable
+      env:
+        - RUSTFLAGS='-F warnings'
+        - RUST_BACKTRACE=full
+      script:
+        - make ci
+
+    - stage: Test
+      name: Minimum
+      language: rust
+      compiler: gcc
+      rust:
+        - 1.41.0
+      env:
+        - RUSTFLAGS='-F warnings'
+        - RUST_BACKTRACE=full
+      script:
+        - make ci
