--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -11,9 +11,9 @@ categories = ["encoding", "data-structures"]
 license = "MIT"
 
 [dependencies]
-cfg-if = "~0.1"
-bytes = { version = "~0.5", optional = true }
-faster-hex = { version = "~0.4", optional = true }
+cfg-if = "1.0.0"
+bytes = { version = "1.0.0", optional = true }
+faster-hex = { version = "0.4.1", optional = true }
 
 [features]
 default = ["std"]
