--- a/tools/compiler/Cargo.toml
+++ b/tools/compiler/Cargo.toml
@@ -28,8 +28,8 @@ name = "moleculec-rust"
 path = "src/compiler-rust.rs"
 
 [dependencies]
-clap = { version = "~2.33", features = ["yaml"] }
-which = "~3.1"
+clap = { version = "2.33.3", features = ["yaml"] }
+which = "4.0.2"
 molecule-codegen = { version = "=0.6.1", path = "../codegen", features = ["compiler-plugin"] }
 
 [badges]
