--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT"
 [dependencies]
 cfg-if = "1.0.0"
 bytes = { version = "1.0.0", optional = true }
-faster-hex = { version = "0.4.1", optional = true }
+faster-hex = { version = "^0.6", optional = true }
 
 [features]
 default = ["std"]
