chore(ci): upgrade toolchain

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
       name: Format
       language: rust
       rust:
-        - 1.44.1
+        - 1.51.0
       script:
         - rustup component add rustfmt
         - make fmt
@@ -13,7 +13,7 @@ matrix:
       name: Clippy
       language: rust
       rust:
-        - 1.44.1
+        - 1.51.0
       script:
         - rustup component add clippy
         - make clippy
@@ -25,7 +25,7 @@ matrix:
       rust:
         - stable
       env:
-        - RUSTFLAGS='-F warnings'
+        - RUSTFLAGS='-D warnings'
         - RUST_BACKTRACE=full
       script:
         - make ci
@@ -37,7 +37,7 @@ matrix:
       rust:
         - 1.41.0
       env:
-        - RUSTFLAGS='-F warnings'
+        - RUSTFLAGS='-D warnings'
         - RUST_BACKTRACE=full
       script:
         - make ci
