--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -12,12 +12,12 @@ license = "MIT"
 
 [dependencies]
 cfg-if = "1.0.0"
-bytes = { version = "1.0.0", optional = true }
+bytes = { version = "1.0.0", default-features=false }
 faster-hex = { version = "^0.6", optional = true }
 
 [features]
 default = ["std"]
-std = ["bytes", "faster-hex"]
+std = ["bytes/std", "faster-hex"]
 
 [badges]
 maintenance = { status = "experimental" }
