--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "molecule"
-version = "0.7.1"
+version = "0.8.0-alpha"
 authors = ["Nervos Core Dev <dev@nervos.org>"]
 edition = "2018"
 description = "Rust bindings for molecule."
