--- a/examples/ci-tests/Cargo.toml
+++ b/examples/ci-tests/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "molecule-ci-tests"
-version = "0.7.1"
+version = "0.8.0-alpha"
 authors = ["Nervos Core Dev <dev@nervos.org>"]
 edition = "2018"
 
