--- a/tools/compiler/Cargo.toml
+++ b/tools/compiler/Cargo.toml
@@ -28,7 +28,7 @@ name = "moleculec-rust"
 path = "src/compiler-rust.rs"
 
 [dependencies]
-clap = { version = "2.33.3", features = ["yaml"] }
+clap = { version = "3", features = ["yaml", "cargo"] }
 which = "4.0.2"
 molecule-codegen = { version = "=0.7.3", path = "../codegen", features = ["compiler-plugin"] }
 
