--- a/tools/codegen/Cargo.toml
+++ b/tools/codegen/Cargo.toml
@@ -29,6 +29,9 @@ serde = { version = "1.0.118", features = ["derive", "rc"], optional = true }
 serde_json = { version = "1.0.61", optional = true }
 serde_yaml = { version = "0.8.15", optional = true }
 
+[dev-dependencies]
+tempfile = "3"
+
 [features]
 default = []
 compiler-plugin = ["serde", "serde_json", "serde_yaml"]
