--- a/tools/codegen/Cargo.toml
+++ b/tools/codegen/Cargo.toml
@@ -30,7 +30,7 @@ serde_json = { version = "1.0.61", optional = true }
 serde_yaml = { version = "0.8.15", optional = true }
 
 [dev-dependencies]
-tempfile = "3"
+tempfile = "=3.6.0"
 
 [features]
 default = []
