--- a/examples/lazy-reader-tests/Cargo.toml
+++ b/examples/lazy-reader-tests/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "molecule-lazy-reader-tests"
-version = "0.7.5"
-authors = ["Nervos Core Dev <dev@nervos.org>"]
-edition = "2018"
+name = "lazy-reader-tests"
+version = "0.1.0"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 molecule = { path = "../../bindings/rust", default-features = false }
-
-[features]
-default = ["std"]
-std = ["molecule/std"]
+lazy_static = "1.4.0"
+rand = "0.8.5"
