--- a/examples/lazy-reader-tests/Cargo.toml
+++ b/examples/lazy-reader-tests/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 molecule = { path = "../../bindings/rust", default-features = false }
 lazy_static = "1.4.0"
 rand = "0.8.5"
+
+[build-dependencies]
+codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
+cc = "1.0.66"
