Improve test cases and fuzz to improve code coverage (#1)

--- a/examples/lazy-reader-tests/fuzz/Makefile
+++ b/examples/lazy-reader-tests/fuzz/Makefile
@@ -2,24 +2,26 @@
 
 # To accelerate the fuzzing process, please download the pre-made corpus file
 # from the following link:
-# https://gist.github.com/XuJiandong/852905df792d34a3400b98145b0f69e7 Save the
+# https://gist.github.com/joii2020/ce55af204f946eebd83269ef8da3f3d1 Save the
 # file named corpus.bin to the corpus/fuzz_target_1/ folder.
 
 all:
-	cargo fuzz run -j40 fuzz_target_1
+	cargo fuzz run -j30 fuzz_target_1
 
+DEFAUTL_TARGET = `rustup show | grep 'Default host' | grep -o ': .*' | sed 's/: //'`
 cov:
-	cargo fuzz coverage fuzz_target_1 
-
-show:
-	~/.rustup/toolchains/nightly-2023-07-26-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/bin/llvm-cov \
-	show target/x86_64-unknown-linux-gnu/release/fuzz_target_1 \
-    --format=html \
-    --instr-profile=coverage/fuzz_target_1/coverage.profdata \
-    > coverage.html
+	cargo fuzz coverage fuzz_target_1
+	cargo-cov -- \
+		show target/$(DEFAUTL_TARGET)/coverage/$(DEFAUTL_TARGET)/release/fuzz_target_1 \
+		--format=html \
+		--ignore-filename-regex="(\/.*\/registry\/*)|(\/rustc\/*)|(\/types_api.rs)" \
+		-instr-profile=coverage/fuzz_target_1/coverage.profdata \
+			> coverage.html
 
 install:
 	rustup component add llvm-tools-preview
+	cargo install cargo-fuzz
+	cargo install cargo-binutils
 
 .PHONY:
 	all cov install
