feat: add bytes_vec features

--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -18,6 +18,8 @@ faster-hex = { version = "^0.6", optional = true }
 [features]
 default = ["std"]
 std = ["bytes/std", "faster-hex"]
+# Provide impls for bytes in no_std environment without depending on atomic
+bytes_vec = []
 
 [badges]
 maintenance = { status = "experimental" }
