Support custom union id (#3)
* support custom unicode id
* Array get item return Vec<u8>
* union uses Enum

--- a/examples/ci-tests/Makefile
+++ b/examples/ci-tests/Makefile
@@ -22,7 +22,7 @@ C_DEPS = ${MOL_DEPS} \
 
 CC = gcc
 CXX = g++
-CFLAGS = -Wall -Werror
+CFLAGS = -Wall -Werror -Wno-array-bounds
 
 clean:
 	@cargo clean
