--- a/test/vectors/simple.yaml
+++ b/test/vectors/simple.yaml
@@ -316,7 +316,7 @@
            01000000//00\
            02000000//00/11"
     f6: "0x00000000"
-    f7: "0x03000000//00000000"
+    f7: "0x0b000000//00000000"
     f8: "0x99"
   expected: "0x67000000//\
                24000000_28000000_2e000000_32000000_\
@@ -336,7 +336,7 @@
                \
                00000000\
                \
-               03000000\
+               0b000000\
                00000000\
                \
                99"
@@ -436,37 +436,37 @@
   item:
     type: byte
     data: "0x00"
-  expected: "0x00000000//00"
+  expected: "0x02000000//00"
 -
   name: UnionA
   item:
     type: Word
     data: "0x0000"
-  expected: "0x01000000//0000"
+  expected: "0x03000000//0000"
 -
   name: UnionA
   item:
     type: StructA
     data: "0x00/00/0000/0000"
-  expected: "0x02000000//00/00/0000/0000"
+  expected: "0x07000000//00/00/0000/0000"
 -
   name: UnionA
   item:
     type: Bytes
     data: "0x00000000"
-  expected: "0x03000000//00000000"
+  expected: "0x0b000000//00000000"
 -
   name: UnionA
   item:
     type: Words
     data: "0x00000000"
-  expected: "0x04000000//00000000"
+  expected: "0x010000ff//00000000"
 -
   name: UnionA
   item:
     type: Table0
     data: "0x04000000"
-  expected: "0x05000000//04000000"
+  expected: "0x020000ff//04000000"
 -
   name: UnionA
   item:
@@ -482,7 +482,7 @@
              00000000_0000\
              00000000\
              04000000"
-  expected: "0x06000000//\
+  expected: "0x030000ff//\
                5a000000//\
                1c000000_1d000000_21000000_27000000_2b000000_2f000000//\
                00/00000000/00000000_0000/00000000/04000000/\
@@ -499,7 +499,7 @@
   item:
     type: Table6Opt
     data: "0x"
-  expected: "0x07000000"
+  expected: "0x040000ff"
 -
   name: UnionA
   item:
@@ -515,7 +515,7 @@
              00000000_0000\
              00000000\
              04000000"
-  expected: "0x07000000//\
+  expected: "0x040000ff//\
                5a000000//\
                1c000000_1d000000_21000000_27000000_2b000000_2f000000//\
                00/00000000/00000000_0000/00000000/04000000/\
