--- a/tools/codegen/Cargo.toml
+++ b/tools/codegen/Cargo.toml
@@ -11,7 +11,7 @@ categories = [
     "parser-implementations",
     "development-tools::build-utils",
     "encoding",
-    "data-structures"
+    "data-structures",
 ]
 license = "MIT"
 
@@ -27,7 +27,7 @@ same-file = "1.0.6"
 semver = "0.11.0"
 serde = { version = "1.0.195", features = ["derive", "rc"], optional = true }
 serde_json = { version = "1.0.111", optional = true }
-serde_yaml = { version = "0.8.26", optional = true }
+serde_yaml = { version = "0.9", optional = true }
 
 [dev-dependencies]
 tempfile = "=3.6.0"
