--- a/tools/compiler/Cargo.toml
+++ b/tools/compiler/Cargo.toml
@@ -11,7 +11,7 @@ categories = [
     "parser-implementations",
     "development-tools",
     "encoding",
-    "data-structures"
+    "data-structures",
 ]
 license = "MIT"
 
@@ -32,9 +32,11 @@ name = "moleculec-rust-lazy-reader"
 path = "src/compiler-rust-lazy-reader.rs"
 
 [dependencies]
-clap = { version = "3", features = ["yaml", "cargo"] }
-which = "4.3.0"
-molecule-codegen = { version = "=0.9.0", path = "../codegen", features = ["compiler-plugin"] }
+clap = { version = "4", features = ["cargo", "string"] }
+which = "6"
+molecule-codegen = { version = "=0.9.0", path = "../codegen", features = [
+    "compiler-plugin",
+] }
 
 [badges]
 maintenance = { status = "experimental" }
